[package]
name = "simple-log-book"
version = "0.1.0"
authors = ["fanchao <dev@fanchao.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0"
async-std = { version = "1", features = ["attributes"] }
sqlx = { version = "0", features = ["sqlite", "chrono", "runtime-async-std-native-tls", "migrate", "json"]}
serde = "1"
serde_derive = "1"
serde_json = "1"
tide = "0"
anyhow = "1"
itertools = "0"
rust-embed = "5"
mime_guess = "2"
derive_more = { version = "0", features = ["default"] }
sodiumoxide = "0"
multer = "2"
bytes = "1"
futures-util = "0"
futures-io = "0"
async-trait = "0"
log = "0"
tree_magic = "0"
uuid = { version = "0", features = ["v4"] }
chrono = { version = "0", features = ["serde"] }