[package]
authors = ["fanchao <dev@fanchao.nz>"]
edition = "2018"
name = "simple-logbook"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = {version = "1", features = ["attributes", "unstable"]}
async-trait = "0"
bytes = "1"
chrono = {version = "0", features = ["serde"]}
derive_more = {version = "0", features = ["default"]}
dotenv = "0"
futures-io = "0"
futures-util = "0"
image = "0"
itertools = "0"
log = "0"
mime_guess = "2"
multer = "2"
rust-embed = "6"
serde = "1"
serde_derive = "1"
serde_json = "1"
sodiumoxide = "0"
sqlx = {version = "0", features = ["sqlite", "chrono", "runtime-async-std-rustls", "migrate", "json"]}
surf = {version = "2", default-features = false, features = ["h1-client-rustls"]}
tide = "0"
tree_magic = "0"
uuid = {version = "1", features = ["v4"]}
