[package]
authors = ["fanchao <dev@fanchao.nz>"]
edition = "2018"
name = "simple-logbook"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
chrono = { version = "0", features = ["serde"] }
derive_more = { version = "0", features = ["default"] }
image = "0"
itertools = "0"
log = "0"
mime_guess = "2"
rust-embed = "8"
serde = "1"
serde_derive = "1"
serde_json = "1"
sodiumoxide = "0"
sqlx = { version = "0", features = [
    "sqlite",
    "chrono",
    "migrate",
    "json",
    "runtime-tokio",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
] }
axum = { version = "0", features = ["multipart"] }
tree_magic = "0"
uuid = { version = "1", features = ["v4"] }
env_logger = "0"
dotenvy = "0"
tower-http = { version = "0", features = ["cors", "trace"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
